src/snapshots/afrotd__parser__tests__rule_html_6.3.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.3 Alle werden berechtigt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Wenn der Scrimmage Kick, der die neutrale Zone überquert hat,
                einen inbounds befindlichen Receiving Team-Spieler berührt,
                darf jeder Spieler den Ball fangen oder recovern (Regel
                6.3.1.b) (Ausnahme: Regel 6.3.4 und 6.5.1.b).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
