src/snapshots/afrotd__parser__tests__rule_html_6.3.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.4 Nichtbeachtung erzwungener Berührung
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Wird ein im Feld befindlicher Spieler von einem Gegner in
                einen Scrimmage Kick geblockt, wird diese Berührung des Kicks
                im Feld nicht beachtet, sofern der Kick die neutrale Zone
                überquert hatte (A.R. 6.3.4.I bis 6.3.4.V und 2.11.4.I).
                </li>
                <li>Wird ein im Feld befindlicher Spieler von einem Ball
                berührt, der von einem Gegner geschlagen oder illegal getreten
                wurde, wird diese Berührung des Kicks nicht beachtet (Regel
                2.11.4.c) (A.R. 6.3.4.II).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
