src/snapshots/afrotd__parser__tests__rule_html_6.3.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.5 Fangen oder Recovern durch Receiving Team
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Wenn ein Scrimmage Kick von einem Receiving Team-Spieler
                gefangen oder recovert wird, bleibt der Ball im Spiel
                (Ausnahmen: Regeln 4.1.3.g, 6.3.9, 6.5.1 und 6.5.2) (A.R.
                8.4.2.V).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
