src/snapshots/afrotd__parser__tests__rule_html_6.3.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.6 Fangen oder Recovern durch Kicking Team
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Wird ein Scrimmage Kick, der die neutrale Zone überquert
                hat, von einem Spieler des Kicking Teams gefangen oder
                recovert, wird der Ball dead (A.R. 6.3.1.IV). Der Ball gehört
                zum Receiving Team am Dead Ball Spot, es sei denn, das Kicking
                Team ist in legalem Ballbesitz, wenn der Ball für dead erklärt
                wird. In diesem Fall gehört der Ball zum Kicking Team
                (Ausnahme: Regel 8.4.2.b).
                </li>
                <li>Wenn gegnerische Spieler, die jeweils berechtigt sind,
                einen Scrimmage Kick zu berühren, gleichzeitig einen Kick
                recovern oder fangen, wird der Ball durch den gemeinsamen
                Ballbesitz dead und dem Receiving Team zuerkannt (Regeln 2.4.4
                und 4.1.3.l).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
