src/snapshots/afrotd__parser__tests__rule_html_6.3.7.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.7 Im Aus zwischen den Goallines oder im Feld zur Ruhe
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Wenn ein Scrimmage Kick zwischen den Goallines ins Aus geht
                oder im Feld zur Ruhe kommt und kein Spieler versucht, den Ball
                zu recovern, wird der Ball dead und gehört zum Receiving Team
                am Dead Ball Spot (Ausnahme: Regel 8.4.2.b).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.7"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
