src/snapshots/afrotd__parser__tests__rule_html_6.3.9.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.3.9 Bodenberührung auf oder hinter einer Goalline
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Wenn ein Scrimmage Kick, der jenseits der neutralen Zone von
                Team B unberührt ist, den Boden auf oder hinter Team B’s
                Goalline berührt, wird der Ball dead und gehört zu Team B
                (Regel 8.4.2.b) (A.R. 6.3.9.I und 6.3.9.II).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.3.9"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
