src/snapshots/afrotd__parser__tests__rule_html_6.4.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.4.1 Behinderung der Fangmöglichkeit
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Wenn ein Spieler des Receiving Teams sich inbounds in einer
                Position befindet, einen Free Kick oder einen Scrimmage Kick,
                der die neutrale Zone überquert hat, zu fangen und wenn er
                tatsächlich versucht, das Fangen durchzuführen, muss ihm eine
                ungehinderte Möglichkeit zum Fangen des Kicks gegeben werden
                (A.R. 6.3.1.III, A.R. 6.4.1.V, 6.4.1.VI und 6.4.1.IX).
                </li>
                <li>Ein Team A-Spieler darf, bevor der Receiver den Kick
                berührt hat, nicht in die unmittelbare Zone vor dem Receiver
                eindringen. Diese Zone umfasst die Breite der Schultern des
                Receivers, verlängert um einen Meter nach vorne. Eine
                Verletzung der Zone ist ein Behinderungsfoul. Im Zweifel ist es
                ein Foul (A.R. 6.4.1.X bis 6.4.1.XIII).
                </li>
                <li>Dieser Schutz endet, wenn ein Kick den Boden berührt
                (Ausnahme: Regel 6.4.1.f), wenn ein Team B-Spieler einen
                Scrimmage Kick jenseits der neutralen Zone mufft oder wenn ein
                Team B-Spieler einen Free Kick im Spielfeld oder in der Endzone
                mufft (Ausnahme: Regel 6.5.1.b) (A.R. 6.4.1.IV).
                </li>
                <li>Wird ein Spieler von einem Gegner geblockt und berührt
                dadurch einen möglichen Receiver, ist der daraus resultierende
                Kontakt kein Foul.
                </li>
                <li>Berührt das Kicking Team einen möglichen Receiver vor oder
                gleichzeitig mit dessen erstem Ballkontakt, ist das ein
                Behinderungsfoul (A.R. 6.4.1.II, 6.4.1.III und 6.4.1.VIII). Im
                Zweifel ist es ein Behinderungsfoul.
                </li>
                <li>Während eines Free Kicks hat ein Receiving Team-Spieler,
                der sich in Position befindet, den Ball zu fangen, den Schutz
                bezüglich des Fangens eines Kicks bzw. eines Fair Catch nicht
                nur, wenn den Ball direkt vom Kicking Tee in die Luft getreten
                wird, sondern auch, wenn der Ball sofort in den Boden getreten
                wird, den Boden einmal berührt und wieder in die Luft fliegt,
                als wäre der Ball direkt vom Tee in die Luft gekickt worden.
                </li>
                <li>
                    <p>
                        Kontakt durch einen Team A-Spieler, der ein Targeting
                        (Regeln 9.1.3 und 9.1.4) oder ein anderes persönliches
                        Foul beinhaltet, das in Bezug zu einer Behinderung beim
                        Fangen eines Kicks steht, kann entweder als Behinderung
                        oder als persönliches Foul geahndet werden. Die
                        15Meterstrafe kann, je nach Wahl von Team B, entweder
                        von dem Punkt, an dem der anschließende Dead Ball zu
                        Team B gehört oder vom Punkt des Fouls durchgeführt
                        werden.
                    </p>
                    <p>
                        <strong>Strafe: Für ein Foul zwischen den Goallines
                        (außer einem Foul hinter B’s 25-Meterlinie bei einem
                        Free Kick) – Ball des Receiving Teams, First Down, 15
                        Meter jenseits des Spot of Foul für ein
                        Behinderungsfoul [S33]. Für ein Foul bei einem Free
                        Kick Spielzug hinter B’s 25-Meterlinie gegen einen
                        Spieler, der ein gültiges Fair Catch-Signal angezeigt
                        hat: Strafe von B’s 25-Meterlinie [S33]. Für ein Foul
                        hinter der Goalline – Anerkennung eines Touchbacks und
                        Strafdurchführung vom Succeeding Spot. Verursacher
                        schwerer Fouls müssen disqualifiziert werden
                        [S47].</strong>
                    </p>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.4.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
