src/snapshots/afrotd__parser__tests__rule_html_6.5.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.5.1 Dead, wo gefangen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Vervollständigt ein Team B-Spieler einen Fair Catch, so
                wird der Ball an dem Punkt dead, an dem er gefangen wurde und
                gehört an diesem Punkt zu Team B (Ausnahme: Vervollständigt ein
                Team B-Spieler bei einem Free Kick einen Fair Catch hinter Team
                B’s 25-Meterlinie, gehört der Ball zu Team B an dessen eigener
                25-Meterlinie.Der nächste Snap wird vom Mittelpunkt zwischen
                den Hash Marks durchgeführt. Das Team, welches den Ball als
                nächstes ins Spiel bringt, kann einen anderen Punkt zwischen
                den Hash Marks wählen, bevor die Play Clock 25 Sekunden anzeigt
                oder vor der Ballfreigabe. Ist die Play Clock auf oder unter 25
                Sekunden oder nach der Ballfreigabe darf der Ball nur dann
                umplatziert werden, wenn ein Team-Timeout genommen wurde. Dies
                gilt nicht, wenn sich vorher ein Foul durch Team A oder sich
                aufhebende Fouls ereignet haben).
                </li>
                <li>Nach einem gültigen Fair Catch-Signal durch einen Team
                B-Spieler besteht weiterhin die ungehinderte Möglichkeit, einen
                Free Kick oder Scrimmage Kick zu fangen, wenn dieser Spieler
                den Kick mufft und immer noch die Gelegenheit hat, den Fair
                Catch zu vervollständigen. Wenn der Spieler (oder ein anderer
                Team B-Spieler) schließlich den Kick fängt, gehört der Ball zu
                Team B und der Ball wird an dem Punkt, an dem der signalgebende
                Spieler erstmals den Kick berührt hat, platziert (A.R. 6.5.1.I
                und 6.5.1.II). Dieser Schutz endet, wenn der Kick den Boden
                berührt.
                </li>
                <li>Regeln bezüglich eines Fair Catch finden nur beim Scrimmage
                Kick, der die neutrale Zone überquert, oder während eines Free
                Kicks Anwendung.
                </li>
                <li>Der Zweck der Fair Catch-Regel ist es, einen Receiver zu
                schützen, der durch sein Fair Catch-Signal zu verstehen gibt,
                dass weder er noch ein Mitspieler den Ball nach dem Fangen
                advancen wird (A.R. 6.5.5.III).
                </li>
                <li>Wurde der Ball gefangen, muss er mit einem Snap durch das
                Receiving Team am Punkt des Fangens ins Spiel gebracht werden
                (Ausnahmen: Regeln 6.5.1.a, 6.5.1.b, 7.1.3 und 8.6.1.b).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.5.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
